<resources>
    <string name="app_name">Dimple Heads</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="dimpleheads">Dimple Heads</string>
    <string name="log_in">Log In</string>
    <string name="no_account">Don\'t Have an Account?</string>
    <string name="create_one">Create One</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="yearsGolfing">Years Spent Golfing</string>
    <string name="alreadyAccount">Already Have An Account?</string>
    <string name="createAccount">Create An Account</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="matthew_vladika">Matthew Vladika</string>
    <string name="userMenuExampleText">Matthew Vladika, Dimple Head</string>
    <string name="last_course_played">Last Course Played :</string>
    <string name="exampleLastCoursePlayed">Lake Monterey on 07/25/2022</string>
    <string name="fsolg">Final Score of Last Game :</string>
    <string name="_68_3_over_par_for_18_holes">68 (3 over Par for 18 Holes)</string>
    <string name="best_score">Best Score :</string>
    <string name="_3_strokes_on_a_par_5_on_04_23_2022">3 Strokes on a Par 5 on 04/23/2022</string>
    <string name="play_new_round">Play New Round</string>
    <string name="continue_round">Continue Round</string>
    <string name="my_statistics">My Statistics</string>
    <string name="my_golf_statistics">My Golf Statistics</string>
    <string name="best_hole">Best Hole :</string>
    <string name="hole_in_one">Hole in One on a Par 3</string>
    <string name="favorite_course">Favorite Course :</string>
    <string name="scott_lake_country_club">Scott Lake Country Club</string>
    <string name="_60_at_lake_monterey_golf_course">60 at Lake Monterey Golf Course</string>
    <string name="rounds_played_w_dimple_heads">Rounds Played W/ Dimple Heads :</string>
    <string name="_4">4</string>
    <string name="number_of_players_saved">Number of Players Saved :</string>
    <string name="placings">Placings :</string>
    <string name="first_places">First Places :</string>
    <string name="_3">3</string>
    <string name="second_places">Second Places :</string>
    <string name="_0">0</string>
    <string name="third_places">Third Places :</string>
    <string name="new_round">New Round</string>
    <string name="players">Players</string>
    <string name="player_1">Player 1:</string>
    <string name="add_player">Add Player</string>
    <string name="player_4">Player 4:</string>
    <string name="player_3">Player 3:</string>
    <string name="player_2">Player 2:</string>
    <string-array name="courseNames">
        <item>Select A Course</item>
        <item>Alpine Golf Club</item>
        <item>Angles Crossing Golf Course</item>
        <item>Arrowhead Golf Course</item>
        <item>Back Nine @ Briarwood Golf Club</item>
        <item>Beeches Golf Club</item>
        <item>Cheshire Hills Golf Course</item>
        <item>Diamond Springs Golf Course</item>
        <item>East Nine @ Briarwood Golf Club</item>
        <item>English Hills Country Club</item>
        <item>Front Nine @ Briarwood Golf Club</item>
        <item>Gleneagle Golf Club</item>
        <item>Glenkerry Golf Course</item>
        <item>Indian Trails Golf Course</item>
        <item>Ironwood Golf Course</item>
        <item>Lake Cora Hills Gold Course</item>
        <item>Lake Monterey Golf Club</item>
        <item>Lakewood on the Green</item>
        <item>Maple Hill Golf Course</item>
        <item>Moors Golf Club</item>
        <item>North Kent Golf Course</item>
        <item>Orchard Hills Golf Club</item>
        <item>Pheasant Golf Course</item>
        <item>Pines Golf Course</item>
        <item>Quail Ridge Golf Club</item>
        <item>Railside Golf Club</item>
        <item>Rogue Golf Club</item>
        <item>Sunnybrook Country Club</item>
        <item>Wallinwood Springs Golf Club</item>
        <item>Western Greens Golf Course</item>
        <item>Yankee Springs Golf Course</item>
    </string-array>
    <string name="title_activity_active_round">ActiveRound</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="golf">Golf</string>
    <string name="add_a_player">Add A Player</string>
    <string name="enter_player_s_name">Enter Player\'s Name</string>
    <string name="hole">Hole</string>
    <string name="par">Par</string>
    <string name="player_1_">Player 1</string>
    <string name="player_2_">Player 2</string>
    <string name="player_3_">Player 3</string>
    <string name="player_4_">Player 4</string>
    <string name="_1">__</string>
    <string name="my_scorecard">My Scorecard</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="previous_9">Previous 9</string>
    <string name="next_9">Next 9</string>
    <string name="finish_round">Finish Round</string>
    <string name="num_1">1</string>
    <string name="matt">Matt</string>
    <string name="enter_par">Enter Par</string>
    <string name="enter_par_for_this_hole">Enter Par For This Hole</string>
    <string name="enter_score">Enter Score</string>
    <string name="enter_number_of_strokes">Enter Number of Strokes</string>
    <string name="round_finished_at">Round Finished At</string>
    <string name="diamondspringsgolfcourse">Diamond Springs Golf Course</string>
    <string name="first_place">First Place</string>
    <string name="_78">78</string>
    <string name="second_place">Second Place</string>
    <string name="third_place">Third Place</string>
    <string name="par_at_diamond_springs_golf_course_is_72">Par at Diamond Springs Golf Course is 72</string>
    <string name="_3400_34th_st_hamilton_michigan_49419">3400 34th St Hamilton, Michigan 49419</string>
    <string name="course_par_72">Course Par: 72</string>
    <string name="number_of_holes_18">Number of Holes: 18</string>
    <string name="opened_in_2002">Opened in 2002</string>
    <string name="driving_range_yes">Driving Range: Yes</string>
    <string name="rental_carts_yes">Rental Carts: Yes</string>
    <string name="rental_clubs_yes">Rental Clubs: Yes</string>
    <string name="pro_on_site_yes">Pro On Site: Yes</string>
    <string name="close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="first_name_or_nickname">First Name or Nickname</string>
    <string name="user_name_dimple_head">User Name, Dimple Head</string>
</resources>