<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/userhometextviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/dimpleheadsGREEN"
        android:paddingVertical="15dp">

        <TextView
            android:id="@+id/homefragusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/matthew_vladika"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/lcprl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/homefragusername"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/lcptv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/last_course_played"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/homefraglastcourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/lcptv"
                android:paddingStart="5dp"
                android:text="@string/exampleLastCoursePlayed"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fsolgrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lcprl"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/fsolgtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fsolg"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/homefragfinalscoreoflastgame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/fsolgtv"
                android:paddingStart="5dp"
                android:text="@string/_68_3_over_par_for_18_holes"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fsolgrl"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/bestscoretextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/best_score"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/homefragbestscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/bestscoretextview"
                android:paddingStart="5dp"
                android:text="@string/_3_strokes_on_a_par_5_on_04_23_2022"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/playnewroundBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userhometextviews"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="15dp"
        android:text="@string/play_new_round"
        android:textSize="18sp" />

    <Button
        android:id="@+id/continueroundBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playnewroundBtn"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="15dp"
        android:text="@string/continue_round"
        android:textSize="18sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/mystatisticsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/continueroundBtn"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_statistics"
        android:textSize="18sp"
        android:paddingVertical="15dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mystatisticsBtn"
        app:srcCompat="@drawable/greenclipart"
        android:padding="3dp"/>

</RelativeLayout>