<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment"
    android:background="@color/secondaryDHG">

    <TextView
        android:id="@+id/mystatsBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/my_golf_statistics"
        android:textColor="@color/dimpleheadsGREEN"
        android:textSize="35sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/mystats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mystatsBanner"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:paddingVertical="15dp">

        <RelativeLayout
            android:id="@+id/entireBestHole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/bestholetv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_hole"
                android:textColor="@color/dimpleheadsGREEN"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usersbestholetv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/bestholetv"
                android:text="@string/hole_in_one"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/entireFavCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/entireBestHole"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/favCoursetv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_course"
                android:textColor="@color/dimpleheadsGREEN"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usersfavcoursetv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/favCoursetv"
                android:text="@string/scott_lake_country_club"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/entireBestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/entireFavCourse"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/bestscoretv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score"
                android:textColor="@color/dimpleheadsGREEN"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usersbestscoretv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/bestscoretv"
                android:text="@string/_60_at_lake_monterey_golf_course"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/entireRoundswithDH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/entireBestScore"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/roundswithdh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rounds_played_w_dimple_heads"
                android:textColor="@color/dimpleheadsGREEN"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usersnumberofroundswithdimplehead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/roundswithdh"
                android:text="@string/_4"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/entireplayersSaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/entireRoundswithDH"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/playersSaved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_players_saved"
                android:textColor="@color/dimpleheadsGREEN"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usersnumberofplayersSaved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/playersSaved"
                android:text="@string/_4"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/entireStandingsRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mystats"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:paddingVertical="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/userstandings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placings"
                android:textColor="@color/dimpleheadsGREEN"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/entireFirstPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userstandings">

                <TextView
                    android:id="@+id/userfirsts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/first_places"
                    android:textColor="@color/dimpleheadsGREEN"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/numberOfUserFirstPlaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/userfirsts"
                    android:text="@string/_3"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/entireSecondPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/entireFirstPlaces">

                <TextView
                    android:id="@+id/userseconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/second_places"
                    android:textColor="@color/dimpleheadsGREEN"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/numberOfUserSecondPlaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/userseconds"
                    android:text="@string/num_1"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/entireThirdPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/entireSecondPlaces">

                <TextView
                    android:id="@+id/userThirds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/third_places"
                    android:textColor="@color/dimpleheadsGREEN"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/numberOfUserThirdPlaces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/userThirds"
                    android:text="@string/_0"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/golf_clipart_crossed_golf_club"
        android:layout_below="@+id/entireStandingsRL"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>